
icon22dir = $(datadir)/pixmaps/bastile/22x22/
icon22_DATA =   bastile-key.png \
                bastile-key-personal.png \
                bastile-key-ssh.png \
                bastile-person.png \
                bastile-sign.png \
                bastile-sign-ok.png \
                bastile-sign-bad.png

iconsrc =       bastile-key.svg \
                bastile-key-personal.svg \
                bastile-key-ssh.svg \
                bastile-person.svg \
                bastile-sign.svg \
                bastile-sign-ok.svg \
                bastile-sign-bad.svg

EXTRA_DIST = $(iconsrc) $(icon22_DATA)
