
icon48dir = $(datadir)/pixmaps/bastile/48x48/
icon48_DATA =   bastile-key.png \
                bastile-key-personal.png \
                bastile-key-ssh.png \
                bastile-person.png \
                bastile-sign.png \
                bastile-sign-bad.png \
                bastile-sign-ok.png \
                bastile-sign-unknown.png

EXTRA_DIST = $(icon48_DATA)
