iconsvgdir = $(datadir)/pixmaps/bastile/scalable/
iconsvg_DATA =  bastile-key.svg \
                bastile-key-personal.svg \
                bastile-key-ssh.svg \
                bastile-person.svg \
                bastile-sign.svg \
                bastile-sign-bad.svg \
                bastile-sign-ok.svg \
                bastile-sign-unknown.svg

EXTRA_DIST = $(iconsvg_DATA)
